testsuite/tests/roles/should_fail/T9204.hs

module T9204 where

import {-# SOURCE #-} T9204

data D a
